--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,48 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".mainFragment.MainFragment">
 
     <Button
         android:id="@+id/btn_network_questions"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/listButtonStyle"
         android:text="Сетевые запросы"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_async_tasks"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/listButtonStyle"
         android:text="Многопоточность"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_network_questions"/>
+        app:layout_constraintTop_toBottomOf="@+id/btn_network_questions"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_animations"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/listButtonStyle"
         android:text="Анимации"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_async_tasks"/>
+        app:layout_constraintTop_toBottomOf="@+id/btn_async_tasks"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_buttons"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/listButtonStyle"
         android:text="Кнопки"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_animations"/>
+        app:layout_constraintTop_toBottomOf="@+id/btn_animations"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_dialogs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/listButtonStyle"
         android:text="Диалоги"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_buttons"/>
+        app:layout_constraintTop_toBottomOf="@+id/btn_buttons"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
